--- a/Halloapp/cs.lproj/Localizable.stringsdict
+++ b/Halloapp/cs.lproj/Localizable.stringsdict
@@ -244,6 +244,26 @@
 			<string>&lt;$user$&gt; a %d další odpověděli na příspěvek od uživatele &lt;$author$&gt;.</string>
 		</dict>
 	</dict>
+	<key>n.unread.comments.title</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_unread_comments@</string>
+		<key>n_unread_comments</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>%d Unread Comments</string>
+			<key>many</key>
+			<string>%d Unread Comments</string>
+			<key>one</key>
+			<string>%d Unread Comment</string>
+			<key>other</key>
+			<string>%d Unread Comments</string>
+		</dict>
+	</dict>
 	<key>notification.n.photos</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
