--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -406,8 +406,7 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Kommentar erneut senden?";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Kommentieren";
 
 /* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
@@ -415,12 +414,6 @@
 
 /* Header that appears above one single unread Message in the chat view. */
 "comment.unread.chat.messages.header.single" = "%@ ungelesene Nachricht";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "%@ ungelesene Kommentare";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "%@ ungelesener Kommentar";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "Deine HalloApp-Version unterstützt diese Art von Kommentar nicht.";
@@ -1651,9 +1644,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Gestern";
-
-/* Camera screen title */
-"title.camera" = "Kamera";
 
 /* Camera screen title for a new moment */
 "title.camera.moment" = "Neuer Moment";
