--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -406,8 +406,7 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "مطمئنید میخواهید دوباره ارسال کنید؟";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "نوشتن نظر";
 
 /* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
@@ -415,12 +414,6 @@
 
 /* Header that appears above one single unread Message in the chat view. */
 "comment.unread.chat.messages.header.single" = "@% پیام خوانده نشده";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "@% نظر خوانده نشده";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "@% نظر خوانده نشده";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "ورژن هالواپ شما این نوع نظر را نمیپذیرد.";
@@ -803,6 +796,9 @@
 /* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.title" = "دوست خود را به گروهتان دعوت کنید";
 
+/* Indicates number of new posts on groups grid */
+"group.grid.n.posts" = "group.grid.n.posts";
+
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "دعوت به گروه با لینک";
 
@@ -1004,6 +1000,10 @@
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.camera.access.request" = "هالواپ دسترسی به دوربین شما ندارد. برای راه‌اندازی آن، به تنظیمات بروید و دوربین را فعال کنید";
 
+/* Label indicating that the camera is in photo mode
+   Label indicating that the camera is in video mode */
+"media.camera.mode.photo" = "ویدیو";
+
 /* Confirmation prompt in media composer. */
 "media.discard.confirmation" = "میخواهید ویرایش را لغو کنید؟";
 
@@ -1117,6 +1117,9 @@
 
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ پست حذف شدند";
+
+/* Header that appears above unread messages in the comments view. */
+"n.unread.comments.title" = "n.unread.comments.title";
 
 /* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
 "new.group.members.empty.placeholder" = "مخاطبین شما که در هالواپ هستند اینجا ظاهر میشوند";
@@ -1651,9 +1654,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "دیروز";
-
-/* Camera screen title */
-"title.camera" = "دوربین";
 
 /* Camera screen title for a new moment */
 "title.camera.moment" = "لحظه جدید";
