--- a/Halloapp/fr.lproj/Localizable.strings
+++ b/Halloapp/fr.lproj/Localizable.strings
@@ -400,15 +400,8 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Renvoyer le commentaire ?";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Ajouter un commentaire";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "%@ commentaires non lus";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "%@ commentaire non lu";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "Ta version de HalloApp ne prend pas en charge ce type de commentaire.";
@@ -1633,9 +1626,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Hier";
-
-/* Camera screen title */
-"title.camera" = "Appareil photo";
 
 /* Title for new message screen where user chooses who to message */
 "title.chat.new.message" = "Nouveau message";
