--- a/Halloapp/id.lproj/Localizable.strings
+++ b/Halloapp/id.lproj/Localizable.strings
@@ -406,8 +406,7 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Kirim lagi Komentar?";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Tambahkan komentar";
 
 /* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
@@ -415,12 +414,6 @@
 
 /* Header that appears above one single unread Message in the chat view. */
 "comment.unread.chat.messages.header.single" = "%@ Pesan yang Belum Dibaca";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "%@ Komentar yang Belum Dibaca";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "%@ Komentar yang Belum Dibaca";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "Versi HalloApp-mu tidak mendukung jenis komentar ini.";
@@ -802,6 +795,9 @@
 
 /* Title of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.title" = "Undang teman ke dalam grupmu";
+
+/* Indicates number of new posts on groups grid */
+"group.grid.n.posts" = "group.grid.n.posts";
 
 /* Action label for inviting others to join the group via link */
 "group.info.invite.to.group.via.link" = "Undang ke Grup lewat Tautan";
@@ -1651,9 +1647,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Kemarin";
-
-/* Camera screen title */
-"title.camera" = "Kamera";
 
 /* Camera screen title for a new moment */
 "title.camera.moment" = "Momen Baru";
