--- a/Halloapp/pl.lproj/Localizable.strings
+++ b/Halloapp/pl.lproj/Localizable.strings
@@ -400,15 +400,8 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Wysłać komentarz ponownie?";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Dodaj komentarz";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "%@ nieprzeczytane(-yach) komentarze(-y)";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "%@ nieprzeczytany komentarz";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "Twoja wersja HalloApp nie obsługuje tego typu komentarzy.";
@@ -1633,9 +1626,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Wczoraj";
-
-/* Camera screen title */
-"title.camera" = "Kamera";
 
 /* Title for new message screen where user chooses who to message */
 "title.chat.new.message" = "Nowa wiadomość";
