--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -394,15 +394,8 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Отправить комментарий повторно?";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Добавить комментарий";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "%@ Непрочитанные комментарии";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "%@ Непрочитанные комментарии";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "Твоя версия HalloApp не поддерживает этот тип комментариев.";
@@ -1573,9 +1566,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Вчера";
-
-/* Camera screen title */
-"title.camera" = "Камера";
 
 /* Title for new message screen where user chooses who to message */
 "title.chat.new.message" = "Новое сообщение";
