--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -406,8 +406,7 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Yorum tekrar gönderilsin mi?";
 
-/* Placeholder text for the comment input field when there is no user input.
-   Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Yorum ekle";
 
 /* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
@@ -415,12 +414,6 @@
 
 /* Header that appears above one single unread Message in the chat view. */
 "comment.unread.chat.messages.header.single" = "Okunmamış %@ mesaj";
-
-/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
-"comment.unread.messages.header.plural" = "%@ okunmamış mesaj";
-
-/* Header that appears above one single unread message in the comments view. */
-"comment.unread.messages.header.single" = "%@ okunmamış mesaj";
 
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "HalloApp sürümün, bu tür yorumları desteklemiyor.";
@@ -1648,9 +1641,6 @@
 
 /* Timestamp: `Yesterday` */
 "timestamp.yesterday" = "Dün";
-
-/* Camera screen title */
-"title.camera" = "Kamera";
 
 /* Camera screen title for a new moment */
 "title.camera.moment" = "Yeni anlık";
